Adicionando Crud de postagens

--- a/api/.env
+++ b/api/.env
@@ -5,4 +5,7 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 DB_PORT=5432
 DB_DATABASE=userCRUD
+MONGO_HOST=localhost
+MONGO_DB=CrudPostagens
+MONGO_PORT=27017
 PORT=3000
