--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "http-server": "^14.0.0",
     "ioredis": "^4.28.3",
     "mongodb": "^4.4.0",
+    "neo4j-driver": "^4.4.3",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3"
   }
